@@ -136,7 +136,9 @@ Cacti CHANGELOG
 -issue#5347: Device form location drop down not populating
 -issue#5354: Realtime graphs can report undefined variable
 -issue#5372: PHP configuration file may not have expected settings
--issue#5375: Add template for Fortinet firewall and Aruba Instant cluster
+-issue#5376: Auth attempts to check for a user lockout when there is no user
+-issue#5377: When attempting to edit a tree, the search filter for Graphs remains disabled
+-feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
 -feature: Upgrade billboard.js to version 3.7.4
 -feature: Upgrade d3.js to version 7.8.2
 
